连接远程数据库

--- a/source/_posts/场内基金数据分析.md
+++ b/source/_posts/场内基金数据分析.md
@@ -6,7 +6,7 @@ tags:
     - 数据分析
     - 基金
 categories: python
-cover: /assets/img/cover/6.webp
+cover: http://cdn.frankfurtlin.top/blog/covers/cover6.webp
 ---
 
 # 场内基金数据分析
