--- a/source/_posts/搭建在线网盘.md
+++ b/source/_posts/搭建在线网盘.md
@@ -5,7 +5,7 @@ tags:
     - 网盘
     - 服务器
 categories: 服务器
-cover: /assets/img/cover/4.webp
+cover: http://cdn.frankfurtlin.top/blog/covers/cover4.webp
 ---
 
 # 自建网盘服务器
