--- a/source/_posts/搭建海报生成器.md
+++ b/source/_posts/搭建海报生成器.md
@@ -5,7 +5,7 @@ tags:
     - 海报
     - 服务器
 categories: 服务器
-cover: /assets/img/cover/5.webp
+cover: http://cdn.frankfurtlin.top/blog/covers/cover5.webp
 ---
 
 # 海报生成器
